--- a/wedding/app/views/forum_messages/_msg_in_thread.html.erb
+++ b/wedding/app/views/forum_messages/_msg_in_thread.html.erb
@@ -8,14 +8,16 @@
 <div>
           <ul class="list-group">
         <% msgs.each do |comment| %>
+          <% this_email = comment.user.email %>
           <li id="thread_item">
                 <br>
               <div id = "msg_in_forum">  
                 <div class = "row">
                   <div class="col-md-10"><%=simple_format("  ")%><%= comment.user.profile.groomName%>  و  <%= comment.user.profile.brideName%>
                   </div>
-                  <div class="col-md-1"><%= image_tag comment.user.profile.photo ,{ :width => 100, :height => 80, :class => 'img-responsive' , :alt => 'Responsive image'}%> 
+                  <div class="col-md-2"><%= link_to (image_tag comment.user.profile.avatar ,{ :width => 100, :height => 80, :class => 'img-responsive marg' , :alt => 'Responsive image'} ) , "#msg-modal", { :data => {:toggle => "modal" , :email => this_email } , :class => 'new-msg-link' }  %> 
                   </div>
+
                 </div>
                 <div class = "row">
                   <div class="col-md-10">
@@ -37,7 +39,7 @@
         </div>
     </div>
 </div>
-    <div class=" col-md-10">        
+    <div class=" col-md-9">        
         <div class="form-group" >
            <!-- <textarea class="form-control" rows="3" placeholder= " نظر تازه درباره‌ی این آتلیه">
           </textarea>-->
@@ -46,11 +48,11 @@
     <%= form_for(:forum_message, :url => forum_messages_path) do |f| %>
           <b>
           <%= f.label :"نظر تازه" %></b><br>
-          <%= f.text_area :content , :size => '80x2'%>
+          <%= f.text_area :content , :size => '77x2'%>
         <div class="actions">
               <%= f.hidden_field :forum_thread_id, :value => thread.id %>
-              <div class=" col-md-5">        
-              <%= f.submit "نگارش"%><span class="glyphicon glyphicon-pencil"></span></div>
+              <div class=" col-md-1">        
+              <%= f.submit "نگارش" , :class=> 'btn btn-primary'%></div>
               </div>
           </div>
           
@@ -61,3 +63,33 @@
     </div>
 
 </div>
+<div class="modal fade" id="msg-modal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;
+      </button>
+                        <h4 class="modal-title" id="myModalLabel"><b>پیام به کاربر</b>
+      </h4>
+                    </div>
+                    <div class="modal-body">
+                      <%= form_tag "/forum_messages/send_email" do %>
+                        <input type = "hidden" id = "r_email">
+                        <%= hidden_field_tag 'email', 'mzh.ariann@yahoo.com' %>
+                        <div class="form-group">
+                            <%= label_tag 'sub', 'موضوع پیام' %>
+                            <%= text_field_tag 'sub', nil, class: 'form-control', placeholder: 'موضوع پیام' %>
+                        </div>
+                        <div class="form-group">
+                           <%= label_tag 'msg', 'پیام شما' %>
+                           <%= text_area_tag 'msg', nil, class: 'form-control', rows: 4, placeholder: 'متن پیام' %>
+                        </div>
+                       <div class="modal-footer">
+                         <%= submit_tag 'ارسال', class: 'btn btn-success'  %>
+                        </div>
+                   <% end %>
+                    </div>
+                  
+                </div>
+            </div>
+        </div>
