--- a/wedding/app/views/layouts/_navbar.html.erb
+++ b/wedding/app/views/layouts/_navbar.html.erb
@@ -1,11 +1,21 @@
         <nav class="navbar navbar-fixed-top wed-nav" id="wed_nav" role="navigation">
-            <div class="container-fluid">
-                    <div class="navbar-brand" ><%= locals[:brand] %></div>
+            <div class="container-fluid wed-nav">
+                    <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                       <span class="sr-only">Toggle navigation</span>
+                       <span class="icon-bar"></span>
+                       <span class="icon-bar"></span>
+                       <span class="icon-bar"></span>
+                    </button>
+                </div>
+
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"   align="center">
+                   <div class="navbar-brand" ><%= locals[:brand] %></div>
+ 
                     <%= form_tag '/welcome/search', :method => :get , :class => "navbar-form navbar-left"   do%>
                     <%= text_field_tag :q , nil ,:class =>"form-control" , :placeholder => "جست‌وجو"%>
                     <%= submit_tag 'پیدا کن!' , :class => "btn btn-default"%>
                     <%end%>
-                    
                     <ul class="nav navbar-nav navbar-right" >
                         <li> <a <%= link_to "خدمات", product_groups_path %> </a> </li>
 <!--                        <li><a href="goods.html">خدمات</a></li> -->
@@ -17,14 +27,13 @@
                             </a>
                             <ul class="dropdown-menu">
                             	<li> <%= link_to "پروفایل ما", current_user.try(:profile) %></li>
-                                <li><a href="#">پیام‌ها</a></li>
-                                <li><a href="#">محیط برنامه‌ریزی</a></li>
+                                <li><%= link_to "محیط برنامه‌ریزی", current_user.try(:scheduler) %></li> 
                                 <li class="divider"></li>
-								<li><a href="#">خروج</a></li>
-	   							<li>
+								<li> 
                                 <%=
-                                button_to "Sign Out", destroy_user_session_path, :method => :delete
-                                %>                                  
+                                button_to "خروج", destroy_user_session_path, :method => :delete , :class => 'container-fluid btn btn-danger stretch kh' 
+                                %>
+                                                              
                                 </li>
 
                                 <li>
@@ -38,6 +47,7 @@
                             </ul>
                         </li>
                     </ul>
+                </div>
                 
             </div>
         </nav>
