--- a/wedding/app/views/product_groups/show.html.erb
+++ b/wedding/app/views/product_groups/show.html.erb
@@ -24,7 +24,7 @@
 			        		<hr class = "style-seven">
 			        	</div>		
 			            <div class ="container-fluid more-info">
-			                <%= link_to (image_tag i.photo_album , {:width => '100%', :align => 'center', :class => 'img-responsive' , :alt => 'Responsive image'}) , {:controller => 'products',:action => 'show', :id => i.id}%>
+			                <%= link_to (image_tag i.photo_album , {:width => '100%', :align => 'center', :class => 'img-responsive itm' , :alt => 'Responsive image'}) , {:controller => 'products',:action => 'show', :id => i.id}%>
 			            </div>
 			        	<div align="center">
 							<%=truncate( i.description, :length => 90)%>
