--- a/wedding/app/views/profiles/show.html.erb
+++ b/wedding/app/views/profiles/show.html.erb
@@ -1,38 +1,3 @@
-<!--
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Bridename:</strong>
-  <%= @profile.brideName %>
-</p>
-
-<p>
-  <strong>Groomname:</strong>
-  <%= @profile.groomName %>
-</p>
-
-<p>
-  <strong>Username:</strong>
-  <%= @profile.userName %>
-</p>
-
-<p>
-  <strong>Photo:</strong>
-  <%= @profile.photo %>
-</p>
-
-<p>
-  <strong>Ceremonydate:</strong>
-  <%= @profile.ceremonyDate %>
-</p>
-
-<p>
-  <strong>Aboutus:</strong>
-  <%= @profile.aboutUs %>
-</p>
-
-<%= link_to 'Edit', edit_profile_path(@profile) %> |
-<%= link_to 'Back', profiles_path %> -->
 
 <!DOCTYPE html>
 <html class='no-js' lang='en'>
@@ -41,31 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Profile</title>
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/profile.css" rel="stylesheet">
-        <link href="css/font.css" rel="stylesheet">
   </head>
   <body id = "" align="center">
     <div id="profile_background" >
-      <!--<%= link_to image_tag ("41.jpg") , :class => "stretch" %> 
-      <%= link_to image_tag ("home.jpg") , :class => "stretch" %> -->
-      <%= link_to image_tag ("love.png") , :class => "stretch" %> 
+      <%= link_to image_tag ("blue.jpg") , :class => "stretch" %> 
     </div>
       <%= render "layouts/navbar" , :locals => {:brand => "پروفایل ما"}%>
         <div class="col-md-offset-2 col-md-8 col-md-offset-2 jumbotron " align = "center" id = "profile_main-content">
         <div class = "col-md-offset-2 col-md-8 col-md-offset-2" align="center">
                         <%= image_tag (@profile.avatar.url ) , :class => "stretch"  %> 
-          <!-- <%= link_to image_tag ("images.jpg") , :class => "stretch" %> -->
         </div>
             <div class = "row">
-                <div class="col-md-offset-2 col-md-8 col-md-offset-2" aligh = "center"> 
-                    <div class=" panel panel-info" aligh = "center" aligh = "center">
-                        <div class="panel-heading" alighn = "center">
+                <div class="col-md-offset-2 col-md-8 col-md-offset-2" align = "center"> 
+                    <div class=" panel panel-info" align = "center" align = "center">
+                        <div class="panel-heading" align = "center">
                             <h3 class="panel-title row">
-                                <div class="col-md-5" id = "profile_desc">
+                                <div class="col-md-6" id = "profile_desc">
                                   تاریخ ازدواج: <%= @profile.ceremonyDate %>
                                 </div>
-                                <div class="col-md-7" id="desc"><b>
+                                <div class="col-md-6" id="desc"><b>
                                   <%= @profile.brideName %>
                                   <%= "و" %>
                                   <%= @profile.groomName %></b>
@@ -80,25 +39,12 @@
                          </div>
                     </div>
                 </div>
-                <!--
-                 -->
             </div>
-            <br>
-            <br>
-            <div class="row container" id = "foott">
-                
+            <div class="row" id = "foott">
                 <div align="center" id ="foott">
                     <%= button_to  "ویرایش اطلاعات", edit_profile_path, :class => 'btn btn-primary', :type=>'button',  :method => :get%> 
-                    <!-- <a class="btn btn-primary" role="button" id ="new-msg-btn">ویرایش اطلاعات</a> 
-                    <a class="btn btn-danger" role="button" > حذف حساب کاربری</a> -->
                 </div>
             </div> 
-
-
-      
-
         </div>
-        <script src="js/jquery.min.js"></script>
-      <script src="js/bootstrap.min.js"></script>     
   </body>
 </html>
